# zoisite

./: .gitignore  BNF.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  builtins.rs  compiler.rs  database.rs  diagnostic.rs  event.rs  grammar.rs  hir.rs  language.rs  lexer.rs  lib.rs  parser.rs  resolve_context.rs  scope.rs  syntax_kind.rs  token.rs  type.rs  type_infer.rs  visitor.rs
crates/compiler/src/snapshots/: zoisite__grammar__tests__assign_expr.snap  zoisite__grammar__tests__block_expr.snap  zoisite__grammar__tests__expr_stmt.snap  zoisite__grammar__tests__fn_call_expr.snap  zoisite__grammar__tests__func_def.snap  zoisite__grammar__tests__let_array.snap  zoisite__grammar__tests__let_stmt.snap  zoisite__grammar__tests__multi_stmt.snap  zoisite__grammar__tests__paren.snap  zoisite__grammar__tests__type_spec.snap  zoisite__grammar__tests__unary.snap  zoisite__lexer__tests__char.snap  zoisite__lexer__tests__empty_char.snap  zoisite__lexer__tests__keyword.snap  zoisite__lexer__tests__number.snap  zoisite__lexer__tests__string.snap  zoisite__lexer__tests__unterminated_string.snap
files/: main  output.ll  output_optimized.ll
fuzz/: Cargo.toml
src/: ast.rs  compiler.rs  database.rs  diagnostic.rs  event.rs  grammar.rs  hir.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolve_context.rs  scope.rs  syntax_error.rs  syntax_kind.rs  token.rs  token_set.rs  type.rs  type_checker.rs  type_infer.rs  validation.rs  visitor.rs
vscode/: .vscodeignore  language-configuration.json  package.json  (+2 more)
(+39 files in other folders)
