[package]
name = "untitled-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = "160"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
rowan = "0.15.15"
unscanny = "0.1.0"
drop_bomb = "0.1.5"
la-arena = "0.3.1"
ecow = "0.2.0"
insta = "1.34.0"
