[package]
name = "zoisite"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = "160"
inkwell = { version = "0.6.0", features = ["llvm16-0"] }
rowan = "0.16.1"
unscanny = "0.1.0"
drop_bomb = "0.1.5"
la-arena = "0.3.1"
ecow = "0.2.5"
insta = "1.43.1"
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"

[[bin]]
name = "zoic"
path = "src/bin/main.rs"
